--- a/CropVideo/Info.plist
+++ b/CropVideo/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>Allow Arbitrary Loads</key>
 	<true/>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>CopyClip</string>
+	</array>
 	<key>Exception Domains</key>
 	<dict>
 		<key>New item</key>
@@ -30,5 +34,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 </dict>
 </plist>
